syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "WebappWebsiteProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: WebSite
message WebSiteFlatData {
    option (routines.entity_type) = "WebSite";
    option (routines.keys).keys = "web_site_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: webSiteId
    string web_site_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string site_name = 2 [(routines.opts).field_type = "name"];
    string http_host = 3 [(routines.opts).field_type = "long-varchar"];
    string http_port = 4 [(routines.opts).field_type = "very-short"];
    string https_host = 5 [(routines.opts).field_type = "long-varchar"];
    string https_port = 6 [(routines.opts).field_type = "very-short"];
    routines.Indicator enable_https = 7 [(routines.opts).field_type = "indicator"];
    string webapp_path = 8 [(routines.opts).field_type = "long-varchar"];
    string standard_content_prefix = 9 [(routines.opts).field_type = "url"];
    string secure_content_prefix = 10 [(routines.opts).field_type = "url"];
    string cookie_domain = 11 [(routines.opts).field_type = "long-varchar"];
    string visual_theme_set_id = 12 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string product_store_id = 15 [(routines.opts).field_type = "id"];
    routines.Indicator allow_product_store_change = 16 [(routines.opts).field_type = "indicator"];
    string hosted_path_alias = 17 [(routines.opts).field_type = "short-varchar"];
    routines.Indicator is_default = 18 [(routines.opts).field_type = "indicator"];
    routines.Indicator display_maintenance_page = 19 [(routines.opts).field_type = "indicator"];
    string tenant_id = 20 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 33;
    map<string, google.protobuf.Any> attachments = 34 ;
}

message WebSiteKey{
    string web_site_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message WebSiteList{
    repeated WebSiteFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListWebSites` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

